--- a/.env.example
+++ b/.env.example
@@ -12,7 +12,7 @@ DB_CONNECTION=pgsql
 DB_HOST=localhost
 DB_PORT=5432
 DB_DATABASE=GTX4
-DB_USERNAME=postgres
+DB_USERNAME=gtx
 DB_PASSWORD=
 
 BROADCAST_DRIVER=log
